# wow-fishing-agent

./: .gitignore  LICENSE  README.md  audio_fishing.py  fishing.py  jsontoyolo.py  keyboard_mouse.py  mouse.py  object_detect_predict.py  object_detect_train.py  od_predict.py  pyproject.toml  requirements.txt
datasets/yolo/: fish.yaml
datasets/yolo/train/: WoWScrnShot_100824_002734.txt  WoWScrnShot_100824_003413.txt  WoWScrnShot_100824_010226.txt  WoWScrnShot_100824_010747.txt  WoWScrnShot_100824_010802.txt  WoWScrnShot_100824_010810.txt  WoWScrnShot_100824_010820.txt  WoWScrnShot_100824_010852.txt  WoWScrnShot_100824_010900.txt  WoWScrnShot_100824_010905.txt  WoWScrnShot_100824_010912.txt  WoWScrnShot_101124_003916.txt  WoWScrnShot_101124_003947.txt  WoWScrnShot_101124_004036.txt  WoWScrnShot_101124_004049.txt
datasets/yolo/val/: WoWScrnShot_100824_010833.txt  WoWScrnShot_100824_010838.txt  WoWScrnShot_101124_003933.txt
sound_ei/: dataset_bite.py  infer.py  loopback.py  pre_miss_bite.py  train.py  wav_collector.py
